--- a/folio-app/src/app/globals.css
+++ b/folio-app/src/app/globals.css
@@ -35,42 +35,19 @@ body {
   text-align: center;
   color: #2d2f31;
   position: relative;
-  padding-bottom: 18px; /* space for thicker underline */
+  padding-bottom: 18px;
   margin-top: 40px;
 }
 
 .thick-gradient-underline::after {
   content: "";
-  width: 220px; /* wider underline */
-  height: 10px; /* thicker underline */
+  width: 220px;
   border-radius: 8px;
 
-  /* Gradient */
   background: linear-gradient(90deg, #ff6a00, #ee0979);
 
   position: absolute;
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
-}
-
-/* CSS */
-.button {
-  background-color: var(--color-folio-blue);
-  border-radius: 0.5rem;
-  box-sizing: border-box;
-  color: #ffffff;
-  display: flex;
-  font-size: 16px;
-  justify-content: center;
-  padding: 0.5em;
-  border: 0;
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button:hover {
-  background-color: var(--color-folio-cyan);
 }
