--- a/folio-app/src/app/globals.css
+++ b/folio-app/src/app/globals.css
@@ -24,6 +24,26 @@
   }
 }
 
+.button {
+  background-color: var(--color-folio-blue);
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  color: #ffffff;
+  display: flex;
+  font-size: 16px;
+  justify-content: center;
+  padding: 0.5em;
+  border: 0;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button:hover {
+  background-color: var(--color-folio-cyan);
+}
+
 body {
   background-color: var(--background);
   color: var(--foreground);
